Prettified both index.html and styke .css

--- a/index.html
+++ b/index.html
@@ -1,107 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flex Header</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body >
- <div  class = "header" >
-   <div  class = "headerContent   hdr1 " >
-     <span    class = "    " >
-       <div  class = "headerLogo" > Header Logo </div>
-     </span>
-     <span class = "    " >
-      <a href = "#" >header link One</a>
-      <a href = "#" >header link Two</a>
-      <a href = "#" >header link Three</a>
-     </span>
-   </div>
-   <div  class = "headerContent hdr1" >
-     <div >
-       <div   class = " awesome " > This website is awesome </div>
-       <div> This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast  </div>
-       <div> <button > Sign up </button > </div>
-     </div>
-     <div class = "pageImage " >
-      <img  src = "" alt = "This is a placeholder for an image"  >
-     </div>
-   </div>
- </div>
-<div  >
-
-<p  class = "randomInfo  "  >Some Random Information.</p>
-<div  class = "randImgGrp  " >
-
-    <div >
-
-      <div  class = "randImg   " > </div>
-      <p  class =  "randImgText   "  >   This  is some subtext under an image or illustration </p>
-
-    </div>
-
-
-    <div >
-
-      <div  class = "randImg   " > </div>
-      <p  class =  "randImgText   "  >   This  is some subtext under an image or illustration </p>
-
-    </div>
-
-
-    <div >
-
-      <div  class = "randImg   " > </div>
-      <p  class =  "randImgText   "  >   This  is some subtext under an image or illustration </p>
-
-    </div>
-
-
-    <div >
-
-      <div  class = "randImg   " > </div>
-      <p  class =  "randImgText   "  >   This  is some subtext under an image or illustration </p>
-
-    </div>
-
-
-</div>
-</div>
-
-<div   class = " quoteCont  "  >
-
-   <div  class = "quoteCover  " >    
-
-    <p  class =  "dQuote" >This is an inspiring quote, or a testimonial from a customer Maybe it's just filling up space, or maybe people will read it. Who knows? All I know is that it looks nice.</p>
-
-    <p  class = "quotee  "  >-Mr. Quotee,The Quote Master</p>
-
-   </div>
-
-</div>
-
-<div  class = "cta1 ">
-
-
-      <div  class = "cta2 "  >
-
-         <div> <p  class = "cta3  " > Call to action! It's time!  </p>  <p  class = "cta4  " >Sign up for our product by ckicking the button right over there</p>  </div>
-
-         <div  class = "cta5  "  >  <button     class = "cta6 " > Sign up </button>    </div>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Flex Header</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="header">
+      <div class="headerContent hdr1">
+        <span class="    ">
+          <div class="headerLogo">Header Logo</div>
+        </span>
+        <span class="    ">
+          <a href="#">header link One</a>
+          <a href="#">header link Two</a>
+          <a href="#">header link Three</a>
+        </span>
       </div>
+      <div class="headerContent hdr1">
+        <div>
+          <div class="awesome">This website is awesome</div>
+          <div>
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </div>
+          <div><button>Sign up</button></div>
+        </div>
+        <div class="pageImage">
+          <img src="" alt="This is a placeholder for an image" />
+        </div>
+      </div>
+    </div>
+    <div>
+      <p class="randomInfo">Some Random Information.</p>
+      <div class="randImgGrp">
+        <div>
+          <div class="randImg"></div>
+          <p class="randImgText">
+            This is some subtext under an image or illustration
+          </p>
+        </div>
 
+        <div>
+          <div class="randImg"></div>
+          <p class="randImgText">
+            This is some subtext under an image or illustration
+          </p>
+        </div>
 
-</div>
+        <div>
+          <div class="randImg"></div>
+          <p class="randImgText">
+            This is some subtext under an image or illustration
+          </p>
+        </div>
 
+        <div>
+          <div class="randImg"></div>
+          <p class="randImgText">
+            This is some subtext under an image or illustration
+          </p>
+        </div>
+      </div>
+    </div>
 
-<div   class = "myCopyCont  "  >
+    <div class="quoteCont">
+      <div class="quoteCover">
+        <p class="dQuote">
+          This is an inspiring quote, or a testimonial from a customer Maybe
+          it's just filling up space, or maybe people will read it. Who knows?
+          All I know is that it looks nice.
+        </p>
 
-     <p  class = "myCopy   "  >Copyright &copy  Adegoke Akintoye 2022</p>
+        <p class="quotee">-Mr. Quotee,The Quote Master</p>
+      </div>
+    </div>
 
-</div>
-</body>
+    <div class="cta1">
+      <div class="cta2">
+        <div>
+          <p class="cta3">Call to action! It's time!</p>
+          <p class="cta4">
+            Sign up for our product by ckicking the button right over there
+          </p>
+        </div>
+
+        <div class="cta5"><button class="cta6">Sign up</button></div>
+      </div>
+    </div>
+
+    <div class="myCopyCont">
+      <p class="myCopy">Copyright &copy Adegoke Akintoye 2022</p>
+    </div>
+  </body>
 </html>
-
